# otus-c-2022-09-AlexanderK

./: README.md
PROJECT/: .gitignore  CMakeLists.txt  README.md
PROJECT/frontend/: README.md  package-lock.json
PROJECT/frontend/src/components/App/: App.css  App.js
PROJECT/frontend/src/components/CloudLogs/: CloudLogs.jsx
PROJECT/logsend/: logsend.c
PROJECT/src/: CMakeLists.txt  generator.py  generator.service  logsend.c  ws.c
PROJECT/wsServer/: CMakeLists.txt
hw01_zipjpeg/: Readme.md  main  main.c
hw02_utf8/: Readme.md  main  main.c
hw02_utf8/utils/: formatter.py  in.txt
hw03_hashsearch/: Readme.md  main  main.c
hw03_hashsearch/files/: test.txt  test_9-317332-e24838.txt
hw04_weather/: CMakeLists.txt  Readme.md  main.c  weather
hw04_weather/lib/: libcurl.dylib  libcurl.la
hw04_weather/lib/pkgconfig/: libcurl.pc
hw04_weather/src/: CMakeLists.txt  main.c
hw04_weather/static/: CMakeLists.txt
hw05_gstreamer/: Readme.md  meson.build
hw05_gstreamer/_todo_test_app/: CMakeLists.txt  Readme.md  main.c
hw05_gstreamer/gst-plugin/: meson.build
hw05_gstreamer/gst-plugin/src/: gstplayer.c  gstplayer.h
hw06_errorlogs/: CMakeLists.txt  Readme.md  main.c
hw06_errorlogs/static/: CMakeLists.txt  alog.c  alog.h
hw07_asm/: main.c
hw07_asm/misc/: Makefile
hw08_valgrind/: Readme.md  fix.diff  new-fix.diff
hw09_daemon/: .gitignore  CMakeLists.txt  Readme.md  build.sh  daemon  example.txt  main.c
hw09_daemon/cfg/: daemon.cfg
hw09_daemon/lib/libconfig/: CMakeLists.txt  libconfig.c
hw10_crc32/: .gitignore  1.txt  Readme.md  main.c
hw11_threads/: .gitignore  CMakeLists.txt  README.md  log.txt  main copy.c  main.c  main_old.c  parse
hw12_network/: README.md  main.c
hw13_async/: .gitignore  CMakeLists.txt  README.md  main.c
